<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Длинные нарды</string>
    <string name="save_game">Сохранить игру?</string>
    <string name="its_draw_try_again">Ничья. Попробуйте еще</string>
    <string name="blacks">Черные</string>
    <string name="reds">Красные</string>
    <string name="go_first">ходят первые</string>
    <string name="tap_to_roll">Нажмите для вброса</string>
    <string name="has_been_won">выиграли</string>
    <string name="continue_game">Продолжить незавершенную игру?</string>
    <string name="tap_to_chellenge">Нажмите, чтобы поспорить</string>
    
    <!-- main menu -->
    <string name="game">Играть</string>
    <string name="game_two">Играть вдвоем</string>
    <string name="prefs">Настройки</string>
    <string name="help">Помощь</string>
    <string name="exit">Выход</string>
    
    <!-- preferences -->
    <string name="sound">Звук</string>
    <string name="animation">Анимация</string>
    <string name="hint">Подсказки ходов</string>
    <string name="autoroll">Автовброс</string>
    <string name="animation_speed">Скорость анимации</string>
    <string name="difficulty">Сложность</string>
    <string name="help_in"><H1><b>Нарды</b></H1> (другие распространённые названия: трик-трак, бэкгэммон, тавла, шеш-беш, коша) — настольная игра для двух игроков на специальной доске, разделённой на две половины. Цель игры — бросая кости и передвигая шашки в соответствии с выпавшими очками, пройти шашками полный круг по доске, зайти ими в свой дом (иногда фигурирует уличное название хата) и выбросить их за доску раньше, чем это сделает противник. 

\n\n<b>Нарды</b> — древняя восточная игра. Родина этой игры точно не известна, но известно, что люди играют в эту игру уже более 5000 лет, чему есть исторические доказательства. Так, самая древняя из досок для игры в нарды была найдена на территории Ирана (в Шахри-Сухте) и датируется около 3000 лет до н. э. Аналог этой игры обнаружен в гробнице фараона Тутанхамона (XV до н. э.) 


\n\n<b>Правила игры</b>
\n\n<b>1. Общие положения.</b>
\n\n<b>1.1.</b> Играют двое. Игра идет на специальной доске, разделенной на две половины (левую и правую). Количество шашек на доске по 15 у каждого игрока, которые расставляются на своей части доски вдоль левой стороны. Наборы шашек у игроков разного, обычно чёрного и белого цвета. Количество зар — 2. Игроки по очереди выбрасывают зары (игральные кости).
Каждый игрок имеет право передвигать только шашки своего цвета.
\n\n<b>1.2.</b> Начальное расположение шашек на доске (позиция 12 и 24) называется «голова». Ход с этого положения называется «ход с головы». За один ход с головы можно взять только одну шашку (кроме первого броска).
\n\n<b>1.3.</b> Право первого хода, и соответственно белого цвета шашек, разыгрывается так: каждый игрок кидает один игральный кубик (зар). Право первого хода и белый цвет шашек получает тот, у кого выпало большее количество очков. При одинаковом количестве выпавших очков, бросок повторяется.
\n\n<b>1.4.</b> В процессе игры шашки двигаются против часовой стрелки.
\n\n<b>1.5.</b> Когда игрок бросает зары, то он обязан в соответствии с выпавшими очками передвинуть свои шашки. Если в лунке стоит шашка противника, то в эту лунку ставить свою шашку нельзя. Ходить надо строго на то число очков, которое выпало на зарах. Игрок обязан, даже в ущерб себе, использовать все выпавшие очки. В случае, когда невозможно сделать два хода, делается больший.
\n\n<b>2. Смысл игры.</b>
\n\n<b>2.1.</b> Игрок должен пройти всеми шашками полный круг (против часовой стрелки), зайти ими в «дом» и «выбросить» их раньше, чем это сделает противник. «Домом» для каждого игрока считается последняя четверть игрового поля — «дом белых» (1-6) и «дом чёрных» (13-18)
\n\n<b>2.2.</b> Термин «выбрасывать» означает делать шашкой такой ход, чтобы она оказывалась за пределами доски. «Выбрасывать» шашки можно только после того, как все шашки «пришли в дом». Следовательно, белые идут из зоны 19-24 в зону 1-6, а черные из зоны 7-12 в зону 13-18
\n\n<b>3. Розыгрыш.</b>
\n\n<b>3.1.</b> Игрок кидает одновременно два зара (кубика). После броска игрок передвигает любую из своих шашек на число лунок (клеток), равное выпавшему числу одного из зар, а затем одну любую шашку на число лунок, равное выпавшему числу другого зара. То есть, если на одном заре выпало «три», а на другом «пять», то, соответственно, можно передвинуть одну свою шашку на три лунки, а другую на пять лунок. В этом случае можно передвигать одну шашку на восемь лунок. Какой ход первым делать, большее выпавшее число или меньшее, не имеет значения. При этом с головы можно брать только одну шашку.
\n\n<b>3.2.</b> Если на обоих зарах выпадает одинаковое количество очков (дубль, гош, куш), тогда игрок играет так, как будто кинул 4 зары и может сделать 4 хода.
\n\n<b>3.3.</b> Запрещено выставлять блок (заграждение; мост) из шести шашек — и даже «пробегом», если ни одна шашка соперника не прошла в дом.
\n\n<b>3.4.</b> Если шашки противника занимают шесть клеток перед какой-нибудь шашкой, то она оказывается запертой.
\n\n<b>3.5.</b> Если шашки заперты так, что игрок не может сделать ни одного хода на то количество очков, что выбросил на зарах (шашки «не идут»), то очки игрока пропадают, а шашки не двигаются вообще.
\n\n<b>3.6.</b> На одно поле позволяется ставить произвольное количество шашек. На лунку, занятую противником, свою шашку ставить нельзя. В ситуации, когда шашки не идут, то есть игрок не может их передвинуть на то количество лунок, которое выпало на зарах (шашки попадают на занятые лунки), все очки пропадают, и игрок пропускает ход. В ситуации, когда можно сделать ход на количество лунок, которое выпало на одном из заров, и нельзя переместить шашку на число лунок, выпавшее на другом заре, выполняется только возможный ход, а очки второго теряются. Игрок не может отказаться от полного хода, даже если он ему не выгоден. Если оба хода сделать невозможно, то играется большее число. Например, выпала комбинация шесть-пять. Игрок может сделать ход на шесть лунок или на пять. Игрок обязан сделать старший ход (на шесть лунок), а меньший ход (на 5 лунок) сгорает.
\n\n<b>3.7.</b> Вывод шашек происходит следующим образом. Игрок имеет право снять с доски шашку, которая стоит на лунке, соответствующей числу выброшенных на зарах очков. Например, если выпало 6-3, игрок может вывести с доски одну шашку с 6-го поля и одну шашку с 3-го поля (три можно сыграть с 6, 5 или 4 поля).
\n\n<b>3.8.</b> В процессе выведения шашек из дома игрок имеет право использовать очки, которые выпали на зарах, по своему усмотрению: он может сыграть шашкой в доме или её выбросить. В процессе выведения шашек с собственного дома разрешается выводить шашки с полей низшего разряда, если в полях высшего разряда шашек нет. Например, если на зарах выпало 6-5, а на полях 6 и 5 нет шашек, то игрок может вывести из дома две шашки со следующего по порядку, четвёртого поля (лунки), если и там нет шашек, то с третьего, если и там нет, то со второго и т. д. Партия заканчивается.
\n\n<b>4. Счёт в игре.</b>
\n\n<b>4.1.</b> Положение, когда проигравший сумел выкинуть хотя бы одну шашку, называется «оин» (0-1).
\n\n<b>4.2.</b> Положение, когда один игрок выбросил все свои шашки, а его противник не сумел выбросить ни одной, называется «марс» (2-0).
\n\n<b>4.3.</b> Понятие ничьи в длинных нардах в их классическом виде, существовавшем многие века, отсутствует. Изначально игра была задумана как бескомпромиссный спор, в котором кто-то обязательно должен выиграть.
Понятие ничьи в длинных нардах введено Федерацией Нард и практикуется уже много лет в очных турнирах. По правилам Федерации игру всегда начинают белые. Когда один игрок игравший белым цветом выбросил все свои шашки, второй игрок, игравший чёрным цветом, имеет право последнего броска. Возможна ситуация, когда игрок игравший чёрным цветом, использовав своё право последнего броска, тоже выбросил все свои шашки. В этом случае партия заканчивается вничью, и игроки получают по пол очка (1/2-1/2), либо по одному очку (1-1), в зависимости от Регламента турнира.

\n\n<b>Розыгрыш первого хода</b>
\nИгроки кидают по одному кубику (зара). Право первого хода достается тому, у кого выпало большее количество очков. Если числа совпали, кидают ещё раз.</string>

</resources>
