<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:orientation="vertical"
    android:background="@drawable/dialog_bg_cuted"
    android:gravity="center_vertical"
    android:padding="15dp">
	<CheckBox android:layout_width="wrap_content"
    		  android:layout_height="wrap_content"
    		  android:text="@string/sound"
    		  android:checked="true"
    		  android:textColor="@android:color/black"
    		  android:id="@+id/sound_checkbox"/>
	<!-- <CheckBox android:layout_width="wrap_content"
    		  android:layout_height="wrap_content"
    		  android:text="@string/animation"
    		  android:checked="true"
    		  android:textColor="@android:color/black"
    		  android:id="@+id/animation_checkbox"/> -->
	
	<CheckBox android:layout_width="wrap_content"
    		  android:layout_height="wrap_content"
    		  android:text="@string/hint"
    		  android:checked="true"
    		  android:textColor="@android:color/black"
    		  android:id="@+id/hint_checkbox"/>
	<CheckBox android:layout_width="wrap_content"
    		  android:layout_height="wrap_content"
    		  android:text="@string/autoroll"
    		  android:checked="false"
    		  android:textColor="@android:color/black"
    		  android:id="@+id/autoroll_checkbox"/>
	<LinearLayout android:layout_width="wrap_content"
    		  	  android:layout_height="wrap_content"
    		  	  android:orientation="horizontal"
    		  	  android:gravity="center_vertical"
    		  	  android:visibility="gone">
		<TextView android:layout_width="fill_parent"
    		  	  android:layout_height="wrap_content"
    		  	  android:text="@string/animation_speed"
    		  	  android:id="@+id/animation_speed_textview"
    		  	  android:textColor="@android:color/black"
    		  	  android:layout_weight="1"/>
		<Spinner android:layout_width="fill_parent"
    		  	 android:layout_height="wrap_content"
    		  	 android:id="@+id/animation_speed_spinner"
    		  	 android:layout_weight="1"/>
	</LinearLayout>
	<LinearLayout android:layout_width="wrap_content"
    		  	  android:layout_height="wrap_content"
    		  	  android:orientation="horizontal"
    		  	  android:gravity="center_vertical"
    		  	  android:visibility="gone">
		<TextView android:layout_width="fill_parent"
    		  	  android:layout_height="wrap_content"
    		  	  android:text="@string/difficulty"
    		  	  android:id="@+id/difficulty_textview"
    		  	  android:textColor="@android:color/black"
    		  	  android:layout_weight="1"/>
		<Spinner android:layout_width="fill_parent"
    		  	 android:layout_height="wrap_content"
    		  	 android:id="@+id/difficulty_spinner"
    		  	 android:layout_weight="1"/>
	</LinearLayout>
</LinearLayout>