<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFabead5"
    android:baselineAligned="false"
    android:gravity="center"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_corners"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/single"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:onClick="click"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/single_player_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:text="@string/game"
                    android:textColor="#FF10889d"
                    android:textSize="30dp" />

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:maxHeight="42dp"
                    android:maxWidth="42dp"
                    android:scaleType="fitEnd"
                    android:src="@drawable/new_game_icon" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="3px"
                android:background="#FF10889d" />

            <LinearLayout
                android:id="@+id/two"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20px"
                android:gravity="center_vertical"
                android:onClick="click"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/two_players_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:text="@string/game_two"
                    android:textColor="#FF10889d"
                    android:textSize="30dp" />

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:maxHeight="42dp"
                    android:maxWidth="42dp"
                    android:scaleType="fitEnd"
                    android:src="@drawable/tow_palyers_icon" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="3px"
                android:background="#FF10889d" />

            <LinearLayout
                android:id="@+id/prefs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20px"
                android:gravity="center_vertical"
                android:onClick="click"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/options_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:text="@string/prefs"
                    android:textColor="#FF10889d"
                    android:textSize="30dp" />

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:maxHeight="42dp"
                    android:maxWidth="42dp"
                    android:scaleType="fitEnd"
                    android:src="@drawable/options_icon" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="3px"
                android:background="#FF10889d" />

            <LinearLayout
                android:id="@+id/help_tour"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20px"
                android:gravity="center_vertical"
                android:onClick="click"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/help_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:text="@string/help"
                    android:textColor="#FF10889d"
                    android:textSize="30dp" />

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:maxHeight="42dp"
                    android:maxWidth="42dp"
                    android:scaleType="fitEnd"
                    android:src="@drawable/about_icon" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="3px"
                android:background="#FF10889d" />

            <LinearLayout
                android:id="@+id/exit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20px"
                android:gravity="center_vertical"
                android:onClick="click"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/exit_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:text="@string/exit"
                    android:textColor="#FF10889d"
                    android:textSize="30dp" />

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:maxHeight="42dp"
                    android:maxWidth="42dp"
                    android:scaleType="fitEnd"
                    android:src="@drawable/exit_icon" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="#FFabead5"
            android:text="@string/app_name"
            android:textColor="#FF10889d"
            android:textSize="40dp"
            android:textStyle="bold" 
            android:paddingLeft="5dp"
            android:paddingRight="5dp"/>
    </RelativeLayout>

</LinearLayout>